test/operator/not_class.lox
struct Bar {}
print !Bar      // error: can't use not operator on other type than bool
